<resources>
    
    <string name="app_name">Odyssey</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="btn_login">Log In</string>
    <string name="nav_home">Home</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_search">Search</string>
    <string name="nav_add">Add</string>
    <string name="nav_account">Account</string>
    <string name="new_account">Sign in with a new account</string>
    <string name="message_signin_landing">Select your stake</string>
    <string name="seller">Seller</string>
    <string name="shopper">Shopper</string>
    <string name="share">Share</string>
    <string name="like">Like</string>
    
</resources>
